<resources>
    <string name="app_name">Laundryy</string>
    <string name="tvCardPelanggan_Id">Id Pelanggan</string>
    <string name="tvCardPelanggan_Nama">Nama Pelanggan</string>
    <string name="tvCardPelanggan_Alamat">Alamat Pelanggan</string>
    <string name="tvCardPelanggan_No">No Pelanggan</string>
    <string name="btnCardPelanggan_Hubungi">Hubungi Pelanggan</string>
    <string name="btnCardPelanggan_Lihat">Lihat Pelanggan</string>
    <string name="tvCardPegawai_Id">Id Pegawai</string>
    <string name="tvCardPegawai_Nama">nama pegawai</string>
    <string name="tvCardPegawai_JK">jk</string>
    <string name="tvCardPegawai_Alamat">alamat pegawai</string>
    <string name="tvCardPegawai_No">no pegawai</string>
    <string name="tvCardPegawai_Jabatan">jabatan Pegawai</string>
    <string name="tvCardPegawai_Cabang">cabang pegawai</string>
    <string name="btnCardPegawai_Hubungi">hubungi pegawai</string>
    <string name="btnCardPegawai_Lihat">lihat pegawai</string>
    <string name="tvCardPelanggan_cabang">cabang pelanggan</string>
    <string name="judulPelanggan">judul + pelanggan</string>
    <string name="NamaPelanggan">nama + pelanggan</string>
    <string name="alamatPelanggan">alamat + pelanggan</string>
    <string name="noPelanggan">no + pelanggan</string>
    <string name="cabangPelanggan">cabang + pelanggan</string>
    <string name="btnSimpan">btn simpan</string>
    <string name="judulPegawai">judul pegawai</string>
    <string name="namaPegawai">nama pegawai</string>
    <string name="jkPegawai">jk pegawai</string>
    <string name="alamatPegawai">alamat pegawai</string>
    <string name="noPegawai">no pegawai</string>
    <string name="jabatanPegawai">jabatan pegawai</string>
    <string name="cabangPegawai">cabang pegawai</string>
    <string name="tvCardLayanan_Id">id layanan</string>
    <string name="tvCardLayanan_Nama">nama layanan</string>
    <string name="tvCardLayanan_Ket">ket layanan</string>
    <string name="tvCardLayanan_Cabang">cabang layanan</string>
    <string name="tvCardLayanan_Harga">harga layanan</string>
    <string name="tvCardLayanan_Kilo">kilo layanan</string>
    <string name="validasi_nama_pelanggan">vlid nama pelanggan</string>
    <string name="validasi_alamat_pelanggan">validasi alamat</string>
    <string name="validasi_no_pelanggan">validasi no</string>
    <string name="validasi_cabang_pelanggan">validasi cabang</string>
    <string name="sukse_simpan_pelanggan">simpan sukse</string>
    <string name="validasi_nama_pegawai">validasi nama</string>
    <string name="validasi_jk_pegawai">validasi jk</string>
    <string name="validasi_alamat_pegawai">validasi alamat</string>
    <string name="validasi_no_pegawai">validasi no</string>
    <string name="validasi_jabatan_pegawai">validasi jabatan</string>
    <string name="validasi_cabang_pegawai">validasi cabng</string>
    <string name="gagal_simpan">gagal simpan</string>
    <string name="validasi_harga">validasi harga</string>
    <string name="tvCardPelanggan_Terdaftar">terdaftar</string>
    <string name="tvLabelLayanan_Id">id layanan</string>
    <string name="TambahLayanan">tambah layanan</string>
    <string name="NamaLayanan">nama layanan</string>
    <string name="harga">harga</string>
    <string name="nama_cabang">nama cabang</string>
    <string name="estimasi">estimasi</string>
    <string name="transaksi">transaksi</string>
    <string name="Pelanggan">pelanggan</string>
    <string name="Laporan">laporan</string>
    <string name="siap">siap</string>
    <string name="jangan">jangan</string>
    <string name="akun">akun</string>
    <string name="layanan">layanan</string>
    <string name="tambahan">tambahan</string>
    <string name="pegawai">pegawai</string>
    <string name="cabang">cabang</string>
    <string name="print">print</string>
    <string name="selamatPagi">pagi</string>
    <string name="selamatSiang">siang</string>
    <string name="selamatSore">sore</string>
    <string name="selamatMalam">malam</string>
    <string name="idCabang">id cabang</string>
    <string name="alamatCabang">alamat cabang</string>
    <string name="namaCabang">nama cabang</string>
    <string name="noCabang">no cabang</string>
    <string name="managerCabang">manager cabang</string>
    <string name="validasiManager">validasi manager</string>
    <string name="validasi_status">validasi status</string>
    <string name="idTambahan">id tambahan</string>
    <string name="hargaTambah">harga</string>
    <string name="statusTambahan">status tambahan</string>
    <string name="judulCabang">cabang judul</string>
    <string name="judultambah">tambahjudul</string>
    <string name="namaTambahan">nama tmabhan</string>
    <string name="hargaTambahan">harga</string>
    <string name="cabangTamabh">cabang</string>
    <string name="statusTambah">status</string>
    <string name="tanggal">tanggal</string>
    <string name="cabangCard">cabang</string>
    <string name="btnEdit">edit</string>
    <string name="cabangManager">manager</string>
    <string name="AlamatCabang">alamat</string>
    <string name="pegawai_tambah">tambah pegawai</string>
    <string name="simpan">simpan</string>
    <string name="edit">edit</string>
    <string name="perbarui">perbarui</string>
    <string name="sunting">sunting</string>
    <string name="pelanggan_tambah">tambah pelanggan</string>
    <string name="cabang_tambah">tambah cabang</string>
    <string name="tambahan_tambah">tambah tambahan</string>
    <string name="layanan_tambah">tambah layanan</string>
    <string name="salam_login">salam</string>
    <string name="ket_login">keterangan</string>
    <string name="no_login">no</string>
    <string name="pass_login">password</string>
    <string name="btn_login">login</string>
    <string name="tvCardPegawai_Id2">id Pelanggan</string>
    <string name="tvCardPelanggan_Id2">id pegawai</string>
    <string name="idTambahan2">id tambahan</string>
    <string name="hargaTambah2">harga</string>
    <string name="statusTambahan2">status</string>
    <string name="detailPelanggan">detail pelanggan</string>
    <string name="detailPegawai">detai pegawai</string>
    <string name="detailLayanan">detail layanan</string>
    <string name="detailTambahan">detail tambahan</string>
    <string name="detailCabang">detail cabang</string>
    <string name="hapusMod">hapus</string>
    <string name="dataPelanggan">data</string>
    <string name="namapelanggan">nama</string>
    <string name="noHp">nohp</string>
    <string name="layananUtama">layanan</string>
    <string name="namaLayanan">nama</string>
    <string name="hargaLayanan">harga</string>
    <string name="layananTambahan">tambahan</string>
    <string name="btnTambahkan">tambahkan</string>
    <string name="btnProses">proses</string>
    <string name="konfirmasiData">konfirmasi</string>
    <string name="batal">batal</string>
    <string name="pembayaran">pembayaran</string>
    <string name="btnPilihPelanggan">pilih pelanggan</string>
    <string name="btnPilihLayanan">pilih layanan</string>
    <string name="totalbayar">total</string>
    <string name="metodePembayaran">metode</string>
    <string name="bayarNanti">nanti</string>
    <string name="tunai">tunai</string>
    <string name="idTransaksi">id transaksi</string>
    <string name="Notatanggal">tanggal</string>
    <string name="rincianTambahan">rincian</string>
    <string name="subtotalTambahan">subtotal</string>
    <string name="btnKirimWa">kirim wa</string>
    <string name="Cetak">cetak</string>
    <string name="nama">nama</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="logout">keluar</string>
    <string name="pilih_pelanggan">pilih pelannggan</string>
    <string name="pilih_layanan">pilih layanan</string>
    <string name="batal_memilih_pelanggan">batal pelanggan</string>
    <string name="batal_memilih_layanan">batal layanan</string>
    <string name="id_transaksi_label">id Transaksi</string>
    <string name="tanggal_label">tanggal</string>
    <string name="pelanggan_label">pelanggan</string>
    <string name="pegawai_label">pegawai</string>
    <string name="layanan_utama_label">layanan utama</string>
    <string name="layanan_tambahan_label">layanan tambahan</string>
    <string name="nota_title">nota</string>
    <string name="thank_you_note">terimakasih</string>
    <string name="whatsapp_not_found">wa</string>
    <string name="print_nota">print</string>
    <string name="send_whatsapp_fail">kirim</string>
    <string name="print_fail">print</string>
    <string name="noKosong">no kosong</string>
    <string name="passKosong">pw kosong</string>
    <string name="LoginBerhasil">berhasil</string>
    <string name="memeriksa">memeriksa</string>
    <string name="noPassSalah">salah</string>
    <string name="namaKosong">nama kosong</string>
    <string name="cabangkosong">cabang kosong</string>
    <string name="maxNo">max no</string>
    <string name="minPass">min pass</string>
    <string name="mendaftar">mendaftar</string>
    <string name="noTerdaftar">terdaftar</string>
    <string name="noDigunakan">digunakan</string>
    <string name="registerBerhasil">berhasil</string>
    <string name="belumDibayar">belum dibayar</string>
    <string name="sudahDibayar">sudah dibayar</string>
    <string name="selesai">selesai</string>
    <string name="bayarSekarang">bayar sekarang</string>
    <string name="ambilSekarang">ambil sekarang</string>
    <string name="diambil">diambil</string>
    <string name="tidakadatambahan">no tambahan</string>
    <string name="roleKosong">role</string>
    <string name="konfirLogout">konfir logout</string>
    <string name="ya">ya</string>
    <string name="no">no</string>
    <string name="keamanan">keamanan</string>
    <string name="masukSandi">masukSandi</string>
    <string name="masuk">masuk</string>
    <string name="sandiSalah">sandi salah</string>
    <string name="cariPelnggan">cari</string>
    <string name="cariLayanan">cari</string>
    <string name="cariLayananTambahan">cari</string>
</resources>