<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvTambahan"
    app:cardCornerRadius="20dp"
    android:padding="5dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvCardTambahan_Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8D7B68"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/idTambahan"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvCardTambahan_Tambahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/namaTambahan"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvCardTambahan_Harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/hargaTambah"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardTambahan_Cabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/cabangCard"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardTambahan_Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/statusTambahan"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/btnCardTambahan_Lihat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btnCardPelanggan_Lihat"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:backgroundTint="#B0A695"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>