<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCabang"
    app:cardCornerRadius="20dp"
    android:padding="5dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvCardCabang_Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8D7B68"
            android:padding="10dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/idCabang"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tvCardCabang_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:text="@string/namaCabang"
            android:textSize="25sp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tvCardCabang_Manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/managerCabang"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardCabang_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/alamatCabang"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardCabang_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/noCabang"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardCabang_Timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tanggal"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCardCabang_Hubungi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnCardPelanggan_Hubungi"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:backgroundTint="#B0A695"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/btnCardCabang_Lihat"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btnCardPelanggan_Lihat"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#B0A695"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>