<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransaksiActivity">
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="0dp"
      android:id="@+id/cvTransaksi"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataPelanggan"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
        <TextView
            android:id="@+id/tvTransaksi_NamaPelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namapelanggan"
            android:textSize="24sp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tvTransaksi_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noHp"
            android:textSize="22sp"
            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/btnTransaksi_PilihPelanggan"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#776B5D"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="@string/btnPilihPelanggan"
            android:layout_marginTop="15dp"/>
      <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layananUtama"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
        <TextView
            android:id="@+id/tvTransaksi_NamaLayanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namaLayanan"
            android:textSize="24sp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tvTransaksi_Harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hargaLayanan"
            android:textSize="22sp"
            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/btnTransaksi_PilihLayanan"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#776B5D"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="@string/btnPilihLayanan"
            android:layout_marginTop="15dp"/>
      <TextView
          android:id="@+id/tvTransaksi_LayananTambahan"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/layananTambahan"
          android:textSize="30sp"
          android:layout_marginTop="15dp"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
    </LinearLayout>
  </androidx.cardview.widget.CardView>
    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/nsvTransaksi_data"
    app:layout_constraintTop_toBottomOf="@id/cvTransaksi"
    app:layout_constraintBottom_toTopOf="@id/cvBtn"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransaksi_LayananTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/cardpilihlayanantambahan"/>
    </androidx.core.widget.NestedScrollView>
  <androidx.cardview.widget.CardView
      android:id="@+id/cvBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingTop="10dp"
          android:paddingBottom="20dp"
          android:paddingEnd="20dp"
          android:paddingStart="20dp">
          <Button
              android:id="@+id/btnTambahan"
              android:layout_width="182dp"
              android:layout_height="58dp"
              android:layout_weight="1"
              android:textColor="#ffffff"
              android:backgroundTint="#776B5D"
              android:text="@string/btnTambahkan"
              android:textSize="20sp"
              android:layout_marginEnd="5dp"/>
          <Button
              android:id="@+id/btnProses"
              android:layout_width="182dp"
              android:layout_height="58dp"
              android:layout_weight="1"
              android:textColor="#ffffff"
              android:layout_marginStart="5dp"
              android:backgroundTint="#776B5D"
              android:text="@string/btnProses"
              android:textSize="20sp"/>
      </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>