<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvPelangan"
    app:cardCornerRadius="20dp"
    android:layout_margin="5dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvCardPelanggan_Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPelanggan_Id"
            android:layout_marginTop="10dp"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/tvCardPelanggan_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPelanggan_Nama"
            android:textSize="28sp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tvCardPelanggan_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPelanggan_Alamat"
            android:textSize="22sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardPelanggan_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPelanggan_No"
            android:textSize="22sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardPelanggan_cabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPelanggan_cabang"
            android:textSize="22sp"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCardPelanggan_Hubungi"
                android:layout_width="185dp"
                android:layout_height="50dp"
                android:text="@string/btnCardPelanggan_Hubungi"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/btnCardPelanggan_Lihat"
                android:layout_width="185dp"
                android:layout_height="50dp"
                android:text="@string/btnCardPelanggan_Lihat"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>