<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvPegawai"
    app:cardCornerRadius="20dp"
    android:padding="5dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8D7B68"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvLabelPegawai_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCardPegawai_Id"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvCardPegawai_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="22sp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvCardPegawai_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPegawai_Nama"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tvCardPegawai_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPegawai_Alamat"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardPegawai_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPegawai_No"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardPegawai_Timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Tanggal"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvCardPegawai_Cabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tvCardPegawai_Cabang"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCardPegawai_Hubungi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnCardPegawai_Hubungi"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:backgroundTint="#B0A695"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/btnCardPegawai_Lihat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnCardPegawai_Lihat"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#B0A695"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>