<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"
        app:cardCornerRadius="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keamanan"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etVerificationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/masukSandi"
                android:background="@drawable/borderr"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:padding="16dp"/>
            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/masuk"
                android:textColor="#ffffff"
                android:backgroundTint="#776B5D"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>